Standardize name to 'todotxtpp'.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Todo.txt-pp",
+  "name": "todotxtpp",
   "preferGlobal": "false",
   "version": "0.2.0",
   "author": "Jeff Allen <jeff@trestletech.com>",
